qbft commit reference test
Signed-off-by: Jason Frame <jasonwframe@gmail.com>